// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewProjectArea renders correctly without projects and with credit card 1`] = `
<div class="new-project-container">
  <div id="newProjectButton" class="new-project-button-container">
    <h1 class="new-project-button-container__label">+ Create Project</h1>
  </div>
  <!---->
</div>
`;

exports[`NewProjectArea renders correctly without projects and with credit card 2`] = `
<div class="new-project-container">
  <div id="newProjectButton" class="new-project-button-container">
    <h1 class="new-project-button-container__label">+ Create Project</h1>
  </div>
  <div class="new-project-popup-container">
    <div id="newProjectPopup" class="new-project-popup"><img src="@/../static/images/project/createProject.jpg" alt="create project image" class="new-project-popup__image">
      <div class="new-project-popup__form-container">
        <div class="new-project-popup__form-container__success-title-area"><svg width="18" height="13" viewBox="0 0 18 13" fill="none" xmlns="http://www.w3.org/2000/svg">
            <path d="M1.375 7.375C0.615609 6.61561 0.615609 5.38439 1.375 4.625C2.13439 3.86561 3.36561 3.86561 4.12501 4.625L8.70834 9.20834C9.46774 9.96773 9.46774 11.1989 8.70834 11.9583C7.94895 12.7177 6.71773 12.7177 5.95834 11.9583L1.375 7.375Z" fill="#34BF89"></path>
            <path d="M8.70834 11.9583C7.94895 12.7177 6.71773 12.7177 5.95834 11.9583C5.19895 11.1989 5.19895 9.96773 5.95834 9.20834L14.2084 0.958327C14.9677 0.198935 16.199 0.198935 16.9584 0.958327C17.7177 1.71772 17.7177 2.94894 16.9584 3.70833L8.70834 11.9583Z" fill="#34BF89"></path>
          </svg>
          <p class="new-project-popup__form-container__success-title-area__title">Payment Method Added</p>
        </div>
        <h2 class="new-project-popup__form-container__main-title">Next, let’s create a project.</h2>
        <div class="input-container full-input">
          <div class="label-container">
            <!---->
            <h3 class="label-container__label">Project Name</h3>
            <h3 class="label-container__label add-label">Up To 20 Characters</h3>
            <!---->
          </div>
          <!---->
          <!----> <input id="Project Name" placeholder="Enter Project Name" type="text" class="headered-input" style="width: 100%; height: 48px;">
        </div>
        <div class="input-container full-input">
          <div class="label-container">
            <!---->
            <h3 class="label-container__label">Description</h3>
            <h3 class="label-container__label add-label">Optional</h3>
            <!---->
          </div>
          <!----> <textarea id="Description" placeholder="Enter Project Description" rows="5" cols="40" wrap="hard" class="headered-textarea" style="width: 100%; height: 100px;"></textarea>
          <!---->
        </div>
        <div class="new-project-popup__form-container__button-container">
          <div class="container white" style="width: 205px; height: 48px;"><span class="label">Back to Billing</span></div>
          <div class="container" style="width: 205px; height: 48px;"><span class="label">Next</span></div>
        </div>
      </div>
      <div class="new-project-popup__close-cross-container"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
          <path d="M15.7071 1.70711C16.0976 1.31658 16.0976 0.683417 15.7071 0.292893C15.3166 -0.0976311 14.6834 -0.0976311 14.2929 0.292893L15.7071 1.70711ZM0.292893 14.2929C-0.0976311 14.6834 -0.0976311 15.3166 0.292893 15.7071C0.683417 16.0976 1.31658 16.0976 1.70711 15.7071L0.292893 14.2929ZM1.70711 0.292893C1.31658 -0.0976311 0.683417 -0.0976311 0.292893 0.292893C-0.0976311 0.683417 -0.0976311 1.31658 0.292893 1.70711L1.70711 0.292893ZM14.2929 15.7071C14.6834 16.0976 15.3166 16.0976 15.7071 15.7071C16.0976 15.3166 16.0976 14.6834 15.7071 14.2929L14.2929 15.7071ZM14.2929 0.292893L0.292893 14.2929L1.70711 15.7071L15.7071 1.70711L14.2929 0.292893ZM0.292893 1.70711L14.2929 15.7071L15.7071 14.2929L1.70711 0.292893L0.292893 1.70711Z" fill="#384B65" class="close-cross-svg-path"></path>
        </svg></div>
    </div>
  </div>
</div>
`;

exports[`NewProjectArea renders correctly without projects and without payment methods 1`] = `
<div class="new-project-container">
  <!---->
  <!---->
</div>
`;
